--- a/aluno/perfil/editar/index.html
+++ b/aluno/perfil/editar/index.html
@@ -28,7 +28,11 @@
 
       <div class="col-md-12 lab-inp">
         <label for="nome" class="form-label">NOME</label>
-        <input id="nome" type="text" class="form-control nome" placeholder="Alice" disabled>
+        <div class="inp">
+            <input id="nome" type="text" class="form-control nome" placeholder="Alice" disabled>
+            <img src="./" alt="">
+        </div>
+       
       </div>
 
       <div class="col-md-12 lab-inp">
@@ -37,8 +41,13 @@
       </div>
 
       <div class="col-md-12 lab-inp">
-        <label for="senha" class="form-label">SENHA</label>
-        <input id="senha_instituicao" type="password" class="form-control senha" placeholder="******" disabled>
+        <label for="senha" class="form-label">NOVA SENHA</label>
+        <input id="senha_instituicao" type="password" class="form-control senha" placeholder="******">
+      </div>
+
+      <div class="col-md-12 lab-inp">
+        <label for="senha" class="form-label">CONFIRME SUA NOVA SENHA</label>
+        <input id="senha_instituicao" type="password" class="form-control senha" placeholder="******">
       </div>
       <div class="buttons">
         <div class="col-md-4">
