--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../componentes/header/styles_header.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js" defer></script>
 
     <title>CADASTRO DE USUÁRIO</title>
@@ -156,7 +157,7 @@
         <h1>CRIAR NOVO USUÁRIO</h1>
         <form class="row g-7">
 
-            <div class="col-md-12 lab-inp">
+            <div class="col-md-6 lab-inp">
                 <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
                 <input type="text" class="form-control nome_do_usuario">
             </div>
@@ -181,6 +182,26 @@
                 </select>
             </div>
 
+            <div class="col-md-6 lab-inp">
+                <label for="curso-select" class="form-label">Curso</label>
+                <select class="form-select curso-select" id="curso-select" aria-label="Default select example">
+                    <option selected>SELECIONE O TIPO DE USUÁRIO</option>
+                    <option value="1">Amanda </option>
+                    <option value="2">Ana</option>
+                    <option value="3">Diego </option>
+                    <option value="4">Daniel </option>
+                    <option value="5">Fernando </option>
+                    <option value="6">Luz </option>
+                    <option value="7">Catherine </option>
+                    <option value="8">Samuel </option>
+                    <option value="10">Eduardo </option>
+                </select>
+            </div>
+            <div class="col-md-6 lab-inp curso" id="curso">
+                <label for="curso" class="form-label">Curso</label>
+                <input type="text" class="form-control curso">
+            </div>
+            
             <div class="col-md-6 lab-inp turma" id="turma">
                 <label for="turma" class="form-label">Turma</label>
                 <input type="text" class="form-control turma">
@@ -200,7 +221,28 @@
                     <button class="terceiro_botao" type="button" onclick="resetForm()">SALVAR</button>
                 </div>
             </div>
+
+            <div class="searchable">
+                <input type="text" placeholder="search countries" onkeyup="filterFunction(this,event)">
+                <ul>
+                    <li>Algeria</li>
+                    <li>Bulgaria</li>
+                    <li>Canada</li>
+                    <li>Egypt</li>
+                    <li>Fiji</li>
+                    <li>India</li>
+                    <li>Japan</li>
+                    <li>Iran (Islamic Republic of)</li>
+                    <li>Lao People's Democratic Republic</li>
+                    <li>Micronesia (Federated States of)</li>
+                    <li>Nicaragua</li>
+                    <li>Senegal</li>
+                    <li>Tajikistan</li>
+                    <li>Yemen</li>
+                </ul>
+            </div>
         </form>
+        
     </div>
 
     <div class="container mt-5 container modal modal-turma">
