--- a/professor/perfil/index.html
+++ b/professor/perfil/index.html
@@ -26,7 +26,7 @@
     <form class="row g-3">
 
       <div class="profile-pic-div">
-        <img class="profile-image" src="img/perfil.jpeg" alt="foto de perfil">
+        <img class="profile_image" id="fotoPerfil" src="img/perfil.jpeg" alt="foto de perfil">
       </div>
 
       <div class="col-md-12">
