--- a/aluno/perfil/editar/index.html
+++ b/aluno/perfil/editar/index.html
@@ -22,17 +22,18 @@
 
 <body>
   <div class="container">
-    <div class="text-center"> <img src="./img/pessoa-sorrindo.webp" id="imgPerfil" width="200" height="200" class="rounded-circle">
+    <div class="text-center"> <img src="./img/pessoa-sorrindo.webp" id="imgPerfil" width="200" height="200"
+        class="rounded-circle">
     </div>
     <form class="row g-3 formPerfil">
 
       <div class="col-md-12 lab-inp">
         <label for="nome" class="form-label">NOME</label>
         <div class="inp">
-            <input id="nome" type="text" class="form-control nome" placeholder="Alice" disabled>
-            <img src="./" alt="">
+          <input id="nome" type="text" class="form-control nome" placeholder="Alice" disabled>
+          <img src="./" alt="">
         </div>
-       
+
       </div>
 
       <div class="col-md-12 lab-inp">
@@ -50,11 +51,22 @@
         <input id="senha_instituicao" type="password" class="form-control senha" placeholder="******">
       </div>
       <div class="buttons">
-        <div class="col-md-4">
-          <button class="botao_editar" type="button"> EDITAR</button>
+
+        <div class="col-md-6">
+          <a href="../index.html">
+            <button class="botao_cancelar" type="button">CANCELAR</button>
+          </a>
         </div>
+
+        <div class="col-md-6">
+          <a href="../index.html">
+            <button class="botao_editar" type="button">SALVAR</button>
+          </a>
+        </div>
+
       </div>
-    </form>
+  </div>
+  </form>
   </div>
 </body>
 
