--- a/aluno/perfil/index.html
+++ b/aluno/perfil/index.html
@@ -41,8 +41,8 @@
         <input id="senha_instituicao" type="password" class="form-control senha" placeholder="******" disabled>
       </div>
       <div class="buttons">
-        <div class="col-md-4">
-          <button class="botao_editar" type="button"> EDITAR</button>
+        <div class="col-md-6">
+          <a href="./editar/index.html"><button class="botao_editar" type="button"> EDITAR</button></a>
         </div>
       </div>
     </form>
