--- a/aluno/index.html
+++ b/aluno/index.html
@@ -1,110 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi Selector</title>
-<style>
-*{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-body{
-    background-color: blueviolet;
-}
-input{
-    outline: none;
-    border: none;
-}
-.multi-selector{
-    width: max-content;
-}
-.select-field{
-    border: 1px solid rgb(187, 187, 187);
-}
-.select-field,.task,.list{
-    width: 100%;
-    background-color: white;
-    padding: 0.3rem;
-}
-.list{
-    box-shadow: 0 30px 60px rgb(0,0,0,0.2);
-    display: none;
-}
-.down-arrow{
-    font-size: 1.2rem;
-    display: inline-block;
-    cursor: pointer;
-    transition: 0.2s linear;
-}
-.task{
-    display: block;
-    padding-left: 0;
-}
-.task span{
-    float: right;
-    font-size: 0.6rem;
-    padding-top: 6px;
-}
-.task:hover{
-    background-color: aliceblue;
-}
-.show{
-    display: block;
-}
-.rotate180{
-    transform: rotate(-60deg);
-}
+    <title>Multilpe Select</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
 
-</style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 </head>
+
 <body>
-    <div class="multi-selector">
 
-     <div class="select-field">
-<input type="text" name="" placeholder="Choose tasks" id="" class="input-selector">
-     <span class="down-arrow">&blacktriangledown;</span>
-     </div>
-<!---------List of checkboxes and options----------->
-     <div class="list">
-    
-       <label for="task1" class="task">
-            <input type="checkbox" name="" id="task1">
-            Task 1
-            <span>10 mins</span>
-     </label>
-       <label for="task2" class="task">
-            <input type="checkbox" name="" id="task2">
-            Task 2
-            <span>20 mins</span>
-     </label>
-       <label for="task3" class="task">
-            <input type="checkbox" name="" id="task3">
-            Task 3
-            <span>30 mins</span>
-     </label>
-       <label for="task4" class="task">
-            <input type="checkbox" name="" id="task4">
-            Task 4
-            <span>40 mins</span>
-     </label>
-
-     </div>
-
-
+   
+    <style>
+        .mul-select {
+            width: 100%;
+        }
+    </style>
+    <div class="container-fluid h-100 text-dark">
+        <div class="row justify-content-center align-items-center h-100">
+            <div class="col col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                <div class="form-group"><label for="tipo-select" class="form-label">Tipo</label>
+                    <select class="mul-select" multiple="true">
+                        <option value="Cambodia">Cambodia</option>
+                        <option value="Khmer">Khmer</option>
+                        <option value="Thiland">Thiland</option>
+                        <option value="Koren">Koren</option>
+                        <option value="China">China</option>
+                        <option value="English">English</option>
+                        <option value="USA">USA</option>
+                    </select>
+                </div>
+            </div>
+        </div>
     </div>
 
-
     <script>
-    
+        $(document).ready(function () {
+            $(".mul-select").select2({
+                placeholder: "select country", //placeholder
+                tags: true,
+                tokenSeparators: ['/', ',', ';', " "]
+            });
+        })
 
-     document.querySelector('.select-field').addEventListener('click',()=>{
-         document.querySelector('.list').classList.toggle('show');
-         document.querySelector('.down-arrow').classList.toggle('rotate180');
-
-     });
-
+        document.getElementById('submitForm').onclick = function () {
+            var selected = [];
+            for (var option of document.getElementById('multiSelect').options) {
+                if (option.selected) {
+                    selected.push(option.value);
+                }
+            }
+            console.log(selected);
+        }
     </script>
 </body>
+
 </html>
