--- a/professor/perfil/editar/index.html
+++ b/professor/perfil/editar/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js">
     </script>
+    <script src="fotoPerfil.js" defer></script>
 
     <link rel="stylesheet" href="../../componentes/header/styles_header.css">
 
@@ -39,9 +40,16 @@
         <form class="row g-3">
 
             <div class="profile-pic-div">
-                <img class="profile_image" id="fotoPerfilProfessor" src="img/perfil.jpeg" alt="foto de perfil">
-                <input type="file" id="inputFotoProfessor" accept="image/*">
-                <label for="file">Escolher foto</label>
+                
+                <div class="img_professor">
+                    <div class="profile_image" id="fotoPerfilProfessor"></div>
+                </div>
+
+                <div class="upload_foto">
+                    <input type="file" id="inputFotoProfessor" class="input_foto" accept="image/*">
+                    <button class="btn_upload_foto" type="button">Escolher Imagem</button>
+                </div>
+
               </div>
 
             <div class="col-md-12" id="icon">
