Nome da Instituição no Header

--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -25,7 +25,7 @@
     <header>
         <div class="primeira_parte">
             <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+            <h1 id="nomeInstituicao"></h1>
         </div>
 
         <a href="../index.html">
