--- a/aluno/perfil/index.html
+++ b/aluno/perfil/index.html
@@ -22,7 +22,8 @@
 
 <body>
   <div class="container">
-    <div class="text-center"> <img src="./img/pessoa-sorrindo.webp" id="imgPerfil" width="200" height="200" class="rounded-circle">
+    <div class="text-center"> <img src="./img/pessoa-sorrindo.webp" id="imgPerfil" width="200" height="200"
+        class="rounded-circle">
     </div>
     <form class="row g-3 formPerfil">
 
