--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -185,7 +185,7 @@
 
             <div class="col-md-6 lab-inp">
                 <label for="senha" class="form-label">Senha</label>
-                <input type="text" class="form-control senha" disabled>
+                <input type="password" class="form-control senha" disabled>
             </div>
 
             <div class="col-md-6 lab-inp">
@@ -239,7 +239,7 @@
 
             <div class="col-md-6 lab-inp" id="curso-aluno">
                 <label for="tipo-select" class="form-label">Curso</label>
-                <select class="form-select tipo-select" id="tipo-select" onChange="deletarCampo()">
+                <select class="form-select tipo-select" id="tipo-select">
                     <option selected></option>
                     <option value="1">Professor</option>
                     <option value="2">Aluno</option>
@@ -249,7 +249,7 @@
 
             <div class="col-md-6 lab-inp" id="turma-aluno">
                 <label for="tipo-select" class="form-label">Turma</label>
-                <select class="form-select tipo-select" id="tipo-select" onChange="deletarCampo()">
+                <select class="form-select tipo-select" id="tipo-select">
                     <option selected></option>
                     <option value="1">Professor</option>
                     <option value="2">Aluno</option>
