--- a/instituicao/usuarios/visualizacao/index.html
+++ b/instituicao/usuarios/visualizacao/index.html
@@ -4,14 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../componentes/header/styles_header.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
 
     <title>USUÁRIOS EXISTENTES</title>
 </head>
@@ -47,7 +54,8 @@
                 <ul class="list-group ul">
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -59,7 +67,8 @@
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -71,7 +80,8 @@
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -83,7 +93,8 @@
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -95,7 +106,8 @@
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -107,7 +119,8 @@
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                                data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
@@ -120,15 +133,15 @@
         </div>
 
         <div class="buttonAddUsuario">
-            <a href="../cadastro/index.html"> <button type="button" class="addUsuario button5"> 
-                <i class="fa fa-plus" style="font-size:36px"></i></button></a>
+            <a href="../cadastro/index.html"> <button type="button" class="addUsuario button5">
+                    <i class="fa fa-plus" style="font-size:36px"></i></button></a>
         </div>
 
 
         <div class="container mt-5 container modal">
             <h1>NOME DO USUARIO</h1>
             <form class="row g-7">
-                <div class="col-md-12 lab-inp">
+                <div class="col-md-6 lab-inp">
                     <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
                     <input type="text" class="form-control nome_do_usuario" placeholder="joao" disabled>
                 </div>
@@ -140,7 +153,7 @@
 
                 <div class="col-md-6 lab-inp">
                     <label for="senha" class="form-label">Senha</label>
-                    <input type="text" class="form-control senha" placeholder="4259" disabled>
+                    <input type="password" class="form-control senha" placeholder="4259" disabled>
                 </div>
 
                 <div class="col-md-6 lab-inp">
@@ -150,8 +163,13 @@
                 </div>
 
                 <div class="col-md-6 lab-inp">
+                    <label for="turma-select" class="form-label">Curso</label>
+                    <input type="text" class="form-control curso" placeholder="Adiministração" disabled>
+                </div>
+
+                <div class="col-md-6 lab-inp">
                     <label for="turma-select" class="form-label">Turma</label>
-                    <input type="text" class="form-control turma" placeholder="425" disabled>
+                    <input type="text" class="form-control turma" placeholder="Administração" disabled>
                 </div>
             </form>
             <div class="buttons">
@@ -166,14 +184,12 @@
                     <button class="segundo_botao" type="button" onclick="changeModalEditar()">EDITAR</button>
                 </div>
             </div>
-            </form>
         </div>
 
-        <div class="container mt-5 container modal modal-editar">
+        <div class="container mt-5 container modal modal-editar" id="modal-editar">
             <h1>EDITAR USUÁRIO</h1>
             <form class="row g-7">
-
-                <div class="col-md-12 lab-inp icon-edit">
+                <div class="col-md-6 lab-inp icon-edit">
                     <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
                     <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com">
                     <i class="fa fa-edit" style="font-size:24px"></i>
@@ -187,13 +203,13 @@
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="senha" class="form-label">Senha</label>
-                    <input type="text" class="form-control senha" placeholder="42.591.538/0001-68">
+                    <input type="password" class="form-control senha" placeholder="42.591.538/0001-68">
                     <i class="fa fa-edit" style="font-size:24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo</label>
-                    <select class="form-select tipo-select" aria-label="Default select example">
+                    <select class="form-select tipo-select" id="tipo-select-edit" onChange="deletarCampo()">
                         <option selected>SELECIONE O TIPO DE USUÁRIO</option>
                         <option value="1">Professor</option>
                         <option value="2">Aluno</option>
@@ -201,11 +217,72 @@
                     </select>
                 </div>
 
-                <div class="col-md-6 lab-inp">
-                    <label for="turma" class="form-label">Turma</label>
-                    <input type="text" class="form-control turma">
+                <div class="col-md-6 lab-inp" id="curso">
+                    <label for="tipo-select" class="form-label">Curso</label>
+                    <select class="form-select mul-select" multiple="true">
+                        <option value="Cambodia">Cambodia</option>
+                        <option value="Khmer">Khmer</option>
+                        <option value="Thiland">Thiland</option>
+                        <option value="Koren">Koren</option>
+                        <option value="China">China</option>
+                        <option value="English">English</option>
+                        <option value="USA">USA</option>
+                    </select>
                 </div>
 
+                <div class="col-md-6 lab-inp" id="turma">
+                    <label for="tipo-select" class="form-label">Turma</label>
+                    <select class="mul-select" multiple="true">
+                        <option value="Cambodia">Cambodia</option>
+                        <option value="Khmer">Khmer</option>
+                        <option value="Thiland">Thiland</option>
+                        <option value="Koren">Koren</option>
+                        <option value="China">China</option>
+                        <option value="English">English</option>
+                        <option value="USA">USA</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6 lab-inp" id="grupo">
+                    <label for="tipo-select" class="form-label">Grupo</label>
+                    <select class="mul-select" multiple="true">
+                        <option value="Cambodia">Cambodia</option>
+                        <option value="Khmer">Khmer</option>
+                        <option value="Thiland">Thiland</option>
+                        <option value="Koren">Koren</option>
+                        <option value="China">China</option>
+                        <option value="English">English</option>
+                        <option value="USA">USA</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6 lab-inp" id="curso-aluno">
+                    <label for="tipo-select" class="form-label">Curso</label>
+                    <select class="form-select tipo-select" id="tipo-select">
+                        <option selected></option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6 lab-inp" id="turma-aluno">
+                    <label for="tipo-select" class="form-label">Turma</label>
+                    <select class="form-select tipo-select" id="tipo-select">
+                        <option selected></option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
+                    </select>
+                </div>
+
+                <script>
+                    $(document).ready(function () {
+                        $(".mul-select").select2({
+
+                        });
+                    })
+                </script>
                 <div class="buttons">
                     <div class="col-md-3">
                         <button class="primeiro_botao" type="button" onclick="showModal()">CANCELAR</button>
@@ -215,11 +292,12 @@
                         <button class="segundo_botao" type="button" onclick="showModal()">SALVAR</button>
                     </div>
                 </div>
-                <button class="col-md-3 quinto_botao" onclick="showModalTrocarTurma()">TROCAR TURMA</button>
             </form>
+
+
         </div>
 
-        <div class="container mt-5 container modal modal-excluir">
+        <div class="container mt-5 container modal modal-excluir" id="modal-excluir">
             <h1>DESEJA EXCLUIR ESSE USUARIO?</h1>
             <h2>Lembre-se que essa é uma ação irreversível!</h2>
 
@@ -232,26 +310,6 @@
                     <button class="terceiro_botao" type="button" onclick="exitchangeModalExcluir()">CONFIRMAR</button>
                 </div>
             </div>
-        </div>
-
-        <div class="container mt-5 container modal modal-excluir modal-trocar-turma">
-            <h1>TROCAR TURMA</h1>
-            <form class="row g-7">
-    
-                <div class="col-md-12 lab-inp">
-                    <label for="turma" class="form-label">Nova turma</label>
-                    <input type="text" class="form-control turma">
-                </div>
-    
-                <div class="buttons">
-                    <div class="col-md-6">
-                        <button class="segundo_botao" type="button" onclick="showModalMembros()">CANCELAR</button>
-                    </div>
-                    <div class="col-md-6">
-                        <button class="terceiro_botao" onclick="showModalMembros()" type="button">SALVAR</button>
-                    </div>
-                </div>
-            </form>
         </div>
     </div>
 </body>
