fazendo tela de cursos do professor e validação de imagens de perfil

--- a/instituicao/turmas/index.html
+++ b/instituicao/turmas/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </li>
 
-                <img src="./img/Line.svg" alt="">
+                <img src="./img/linha.svg" alt="">
 
                 <li class="list-group-item li">
                     <div class="turma">
@@ -59,22 +59,7 @@
                         <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
-                <img src="./img/Line.svg" alt="">
-
-                <li class="list-group-item li">
-                    <div class="turma">
-                        <p class="turma">Turma:</p>
-                        <img class="book" src="./img/icone_turma.svg" alt="book">
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
-                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
-                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
+                <img src="./img/linha.svg" alt="">
 
                 <li class="list-group-item li">
                     <div class="turma">
@@ -89,7 +74,7 @@
                     </div>
                 </li>
 
-                <img src="./img/Line.svg" alt="">
+                <img src="./img/linha.svg" alt="">
 
                 <li class="list-group-item li">
                     <div class="turma">
@@ -104,7 +89,22 @@
                     </div>
                 </li>
 
-                <img src="./img/Line.svg" alt="">
+                <img src="./img/linha.svg" alt="">
+
+                <li class="list-group-item li">
+                    <div class="turma">
+                        <p class="turma">Turma:</p>
+                        <img class="book" src="./img/icone_turma.svg" alt="book">
+                        <p class="nome">NOME</p>
+                    </div>
+                    <div class="button">
+                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
+                    </div>
+                </li>
+
+                <img src="./img/linha.svg" alt="">
 
                 <li class="list-group-item li">
                     <div class="turma">
@@ -274,7 +274,7 @@
                         </div>
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/linha.svg" alt="">
 
                     <li class="list-group-item li-membro">
                         <div class="membro">
@@ -304,7 +304,7 @@
                         </div>
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/linha.svg" alt="">
 
                     <li class="list-group-item li-membro">
                         <div class="membro">
@@ -440,7 +440,7 @@
                         </div>
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/linha.svg" alt="">
 
                     <li class="list-group-item li">
                         <div class="membro">
@@ -456,7 +456,7 @@
                         </div>
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/linha.svg" alt="">
 
                     <li class="list-group-item li">
                         <div class="membro">
@@ -472,7 +472,7 @@
                         </div>
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/linha.svg" alt="">
 
                     <li class="list-group-itemli">
                         <div class="membro">
@@ -507,7 +507,7 @@
                         </div>
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/linha.svg" alt="">
 
                     <li class="list-group-item li">
                         <div class="membro">
@@ -524,7 +524,7 @@
                         </div>
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/linha.svg" alt="">
 
                     <li class="list-group-item li">
                         <div class="membro">
@@ -615,7 +615,7 @@
             </li>
 
 
-            <img src="./img/Line.svg" alt="">
+            <img src="./img/linha.svg" alt="">
 
             <li class="list-group-item li">
                 <div class="grupo">
@@ -656,7 +656,7 @@
                 </div>
             </li>
 
-            <img src="./img/Line.svg" alt="">
+            <img src="./img/linha.svg" alt="">
             <li class="list-group-item li">
                 <div class="grupo">
                     <p class="prof_orientador">Professor Orientador:</p>
