--- a/professor/componentes/side_menu/side_menu.html
+++ b/professor/componentes/side_menu/side_menu.html
@@ -17,14 +17,13 @@
             <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo">
             <i class='bx bx-menu' id="btn"></i>
         </div>
-        
-        <ul class="nav-list">
+
             <li>
                 <a href="#">
                     <i class='bx bx-group' ></i>
-                    <span class="links_name">Minhas turmas</span>
+                    <span class="links_name">Cursos</span>
                 </a>
-                <span class="tooltip">Turmas</span>
+                <span class="tooltip">Cursos</span>
             </li>
             <li>
                 <a href="#">
@@ -61,7 +60,6 @@
                 </a>
                 <span class="tooltip">Log Out</span>
             </li>
-        </ul>
 
     </div>
 
