--- a/professor/perfil/editar/index.html
+++ b/professor/perfil/editar/index.html
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="upload_foto">
-                    <input type="file" id="inputFotoProfessor" class="input_foto" accept="image/*">
+                    <input type="file" id="inputFotoProfessor" class="input_foto" accept="image/png,image/jpg,image/jpeg">
                     <button class="btn_upload_foto" type="button">Escolher Imagem</button>
                 </div>
 
