--- a/professor/cursos/index.html
+++ b/professor/cursos/index.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Cursos</title>
 </head>
 <body>
@@ -22,13 +26,12 @@
             <i class='bx bx-menu' id="btn"></i>
         </div>
         
-        <ul class="nav-list">
             <li>
-                <a href="#">
+                <a href="./index.html">
                     <i class='bx bx-group' ></i>
-                    <span class="links_name">Minhas turmas</span>
+                    <span class="links_name">Cursos</span>
                 </a>
-                <span class="tooltip">Turmas</span>
+                <span class="tooltip">Cursos</span>
             </li>
             <li>
                 <a href="#">
@@ -65,7 +68,6 @@
                 </a>
                 <span class="tooltip">Log Out</span>
             </li>
-        </ul>
 
     </div>
 
@@ -81,6 +83,96 @@
             </div>
         </a>
     </header>
+
+    <div class="container-geral">
+        <div class="container">
+            <div class="col-md-6 for-cnp cursos_existentes icon">
+                <input type="text" placeholder="Insira o curso que procura:" class="form-control cursos_ex">
+                <i class="fa fa-search" style="font-size:24px"></i>
+            </div>
+
+            <ul class="list-group ul-curso-existen">
+                <li class="list-group-item li">
+                    <div class="curso">
+                        <p class="curso">Curso:</p>
+                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <p class="nome" id="nomeCurso">NOME</p>
+                    </div>
+                    <div class="button">
+                        <a href="cursos/index.html">
+                            <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                        </a>
+                    </div>
+                </li>
+
+                <img src="./img/linha.svg" alt="">
+
+                <li class="list-group-item li">
+                    <div class="curso">
+                        <p class="curso">Curso:</p>
+                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <p class="nome" id="nomeCurso">NOME</p>
+                    </div>
+                    <div class="button">
+                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                    </div>
+                </li>
+                <img src="./img/linha.svg" alt="">
+
+                <li class="list-group-item li">
+                    <div class="curso">
+                        <p class="curso">Curso:</p>
+                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <p class="nome" id="nomeCurso">NOME</p>
+                    </div>
+                    <div class="button">
+                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                    </div>
+                </li>
+
+                <img src="./img/linha.svg" alt="">
+
+                <li class="list-group-item li">
+                    <div class="curso">
+                        <p class="curso">Curso:</p>
+                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <p class="nome" id="nomeCurso">NOME</p>
+                    </div>
+                    <div class="button">
+                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                    </div>
+                </li>
+
+                <img src="./img/linha.svg" alt="">
+
+                <li class="list-group-item li">
+                    <div class="curso">
+                        <p class="curso">Curso:</p>
+                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <p class="nome" id="nomeCurso">NOME</p>
+                    </div>
+                    <div class="button">
+                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                    </div>
+                </li>
+
+                <img src="./img/linha.svg" alt="">
+
+                <li class="list-group-item li">
+                    <div class="curso">
+                        <p class="curso">Curso:</p>
+                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <p class="nome" id="nomeCurso">NOME</p>
+                    </div>
+                    <div class="button">
+                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+
+    </div>
 
     <script>
         let sidebar = document.querySelector(".sidebar");
