tela de listagem de cursos do professor feita

--- a/professor/cursos/index.html
+++ b/professor/cursos/index.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="button">
                         <a href="cursos/index.html">
-                            <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                            <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
                         </a>
                     </div>
                 </li>
@@ -114,7 +114,7 @@
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
                     </div>
                 </li>
                 <img src="./img/linha.svg" alt="">
@@ -126,20 +126,7 @@
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
-                    </div>
-                </li>
-
-                <img src="./img/linha.svg" alt="">
-
-                <li class="list-group-item li">
-                    <div class="curso">
-                        <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book">
-                        <p class="nome" id="nomeCurso">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
                     </div>
                 </li>
 
@@ -152,7 +139,7 @@
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
                     </div>
                 </li>
 
@@ -165,7 +152,20 @@
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">SOBRE O CURSO</button>
+                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
+                    </div>
+                </li>
+
+                <img src="./img/linha.svg" alt="">
+
+                <li class="list-group-item li">
+                    <div class="curso">
+                        <p class="curso">Curso:</p>
+                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <p class="nome" id="nomeCurso">NOME</p>
+                    </div>
+                    <div class="button">
+                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
                     </div>
                 </li>
 
