--- a/professor/cursos/index.html
+++ b/professor/cursos/index.html
@@ -99,7 +99,7 @@
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <a href="cursos/index.html">
+                        <a href="turmas/index.html">
                             <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
                         </a>
                     </div>
