fazendo listagem de turmas do professor

--- a/instituicao/turmas/index.html
+++ b/instituicao/turmas/index.html
@@ -18,9 +18,8 @@
 
     <title>LISTAGEM DE TURMAS</title>
 </head>
-<div class="bg">
 
-</div>
+<div class="bg"></div>
 
 <body>
     <div class="container-geral">
